--- a/asset/sass/Pages/_login.scss
+++ b/asset/sass/Pages/_login.scss
@@ -1,65 +1,58 @@
-.breadcrumbs {
-    padding: 6px 0px;
-    border-bottom: 1px solid $color-dark-4;
-
-    li {
-        display: inline;
-
-    }
-
-    a {
-        color: $color-dark-2;
-        text-decoration: none;
-    }
-
-    span {
-        margin: 0 5px;
-    }
-}
-
-.login {
-    .authentication {
-        width: 50%;
-        text-align: left;
-        border: 1px solid $color-dark-4;
-        background: $color-white-2;
-        padding: $pd-4;
-    }
-
-    h4 {
-        @include styleText($color-dark-1, $fs-2, $fw-2);
-        text-transform: uppercase;
-    }
-
-    .form-control{
-        display: block;
-        width: 70%;
-        height: 34px;
-        padding: 6px $pd-1;
-        color: $color-dark-2;
-    }
-      
-    label{
-        @include styleText($color-dark-1,$fs-1, $fw-2);
-        margin-top:10px;
-        margin-bottom: 2px;
-        .required{
-            color: $color-red-2;
-        }
-    }
-
-    .forgot-pass{
-        font-size: 12px;
-        margin-top: 15px;      
-    }
-
-    .reg{
-        a{
-            color: $color-red-2;
-            &:hover{
-                font-weight: $fw-3;
-            }
-        }
-    }
+#login{
+    .account__login{
+        display: inline-block;
+	    width: 100%;
+	    text-align: center;
    
+    .login__box{
+        display: inline-block;
+	    width: 48%;
+	    float: none;
+	    text-align: left;
+	    border: 1px #eaeaea solid;
+	    background: #f9f9f9;
+	    padding: 25px;
+		h4{
+			margin-bottom: 16px;
+			text-transform: uppercase;
+			font-weight: 600;
+		}
+		label{
+			margin-top: 10px;
+			margin-bottom: 2px;
+			font-weight: 700;
+		}
+		.button{
+			margin-top: 15px;
+			display: inline-block;
+			border: 0;
+			background: #CF3341;
+			padding: 6px 16px;
+			font-size: 12px;
+			border: 1px solid #CF3341;
+			font-weight: 400;
+			text-align: center;
+			white-space: nowrap;
+			color: #fff;
+			font-weight: normal;
+			transition: all 0.3s linear;
+			span{
+				text-transform: uppercase;
+				font-weight: 700;
+				letter-spacing: 0.5px;
+			}
+			&:hover{
+				background-color: $color-dark-1;
+				border:1px solid $color-dark-1;
+			}
+		}
+		.nextlogin{
+			display: flex;
+			justify-content: flex-end;
+			a{
+				margin-left: 5px;
+			}
+		}
+    }
+} 
 }
