--- a/view/login.html
+++ b/view/login.html
@@ -21,37 +21,44 @@
     <!-- Owl carousel -->
     <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
   <!-- Main CSS -->
-  <link rel="stylesheet" href="./asset/css/main.css">
+  <link rel="stylesheet" href="../asset/css/main.css">
 </head>
 
 <body>
-    <div class="breadcrumbs mt-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <ul>
-                        <li class="home"> <a href="./index.html">Trang chủ</a><span>&raquo;</span></li>
-                        <li><b>Tài khoản</b></li>
-                    </ul>
+  <div class="login container" id="login">
+    <div class="login__content">
+      <div class="account__login">
+        <div class="login__box">
+        <form method="post">
+              <div class="row">
+                <div class="col-12">
+                  <div class="check-title">
+                    <h4>LOG IN</h4>
+                  </div>
                 </div>
-            </div>
+                <div class="col-12">
+                  <label>Your email or username <span>*</span></label>
+                  <div class="input-text">
+                    <input type="text" name="email" class="form-control">
+                  </div>
+                </div>
+                <div class="col-12">
+                  <label>Your password <span>*</span></label>
+                  <div class="input-text">
+                    <input type="text" name="password" class="form-control">
+                  </div>
+                </div>
+                  <div class="submit-text container">
+                    <button class="button"><i class="fa fa-user"></i><span> Login</span></button>
+                    <label class="nextlogin">Do you already have an account?<a class="font-medium text-gray-600 hover:text-purple-600 dark:text-gray-500" href="./signup.html">Sign up</a></label>
+                  </div>
+                </div>
+              </div>
+            </form>
         </div>
+      </div>
     </div>
-    <section class="login">
-        <div class="login_content container">
-            <div class="authentication container mt-4">
-                <h4>Đăng Nhập</h4>
-                <label> Email hoặc Tên đăng nhập <span class="required">*</span></label>
-                <input id="email_login" type="text" placeholder="Email/Tên đăng nhập" class="form-control">
-                <label>Mật khẩu <span class="required">*</span></label>
-                <input id="password" type="password" placeholder="Mật khẩu" class="form-control">
-                
-                <p class="forgot-pass"><a href="#">Quên mật khẩu?</a></p>
-                <button class="btn-login"><i class="fa fa-lock mr-2"></i><span>Đăng nhập</span></button>
-                <p class="reg mt-3">Bạn chưa có tài khoản?<a href="#"> Đăng ký</a></p>
-            </div>
-        </div>
-    </section>
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
