--- a/view/signup.html
+++ b/view/signup.html
@@ -14,73 +14,79 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <!-- Font icomoon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icomoon@1.0.0/style.min.css">
+  <!-- Font icomoon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icomoon@1.0.0/style.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Owl carousel -->
-    <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
+  <!-- Owl carousel -->
+  <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
   <!-- Main CSS -->
-  <link rel="stylesheet" href="./asset/css/main.css">
+  <link rel="stylesheet" href="../asset/css/main.css">
 </head>
+
 <body>
-    <div class="breadcrumbs mt-2">
-        <div class="container">
+  <div class="signup container" id="signup">
+    <div class="signup__content">
+      <div class="account__login">
+        <div class="signup__box">
+          <form method="post">
             <div class="row">
-                <div class="col-xs-12">
-                    <ul>
-                        <li class="home"> <a href="./index.html">Trang chủ</a><span>&raquo;</span></li>
-                        <li><b>Đăng ký</b></li>
-                    </ul>
+              <div class="col-12">
+                <div class="check-title">
+                  <h4>New Customer</h4>
                 </div>
+              </div>
+              <div class="col-12">
+                <label>Name:</label>
+                <div class="input-text">
+                  <input type="text" name="name" class="form-control" id="signUp__name">
+                </div>
+              </div>
+              <div class="col-12">
+                <label>Address:</label>
+                <div class="input-text">
+                  <input type="text" name="address" id="signUp__address" class="form-control">
+                </div>
+              </div>
+              <div class="col-12">
+                <label for="gender">Giới tính:</label>
+                <select id="signUp__gender" name="gender">
+                  <option value="true">Male</option>
+                  <option value="false">Female</option>
+                </select>
+              </div>
+              <div class="col-sm-6">
+                <label>Email:</label>
+                <div class="input-text">
+                  <input type="text" name="email" id="signUp__email" class="form-control">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <label>Phone:</label>
+                <div class="input-text">
+                  <input type="text" name="phone" id="signUp__phone" class="form-control">
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="billing-checkbox">
+                  <label class="inline" for="rememberme">
+                    <input type="checkbox" value="forever" id="rememberme" name="rememberme">
+                    Sign up for our newsletter! </label>
+                </div>
+                <div class="submit-text">
+                  <button class="button" onclick="signUp()"><i class="fa fa-user"></i><span> Register</span></button>
+                  <label class="nextSignUp">Don’t have an account yet? <a
+                      class="font-medium text-gray-600 hover:text-purple-600 dark:text-gray-500" href="./signup.html">
+                      Sign up</a></label>
+                </div>
+              </div>
             </div>
+          </form>
         </div>
+      </div>
     </div>
-    <section class="login signup_form">
-        <div class="signup-content container">
-            <div class="authentication signup container mt-4">
-                <form action="">
-                    <div class="row p-3">
-                        <div class="col-xs-12">
-                            <h4>Đăng ký</h4>
-                        </div>
-                        <div class="col-xs-12">
-                            <label> Họ và tên</label>
-                        <input id="name" type="text"  class="form-control">
-                        </div>
-                        <div class="col-xs-12">
-                            <label> Email </label>
-                            <input id="email" type="text"  class="form-control">
-                        </div>
-                        <div class="col-xs-12">
-                            <label> Số điện thoại </label>
-                            <input id="phone" type="text"  class="form-control">
-                        </div>
-                        <div class="col-xs-12">
-                            <label> Mật khẩu </label>
-                            <input id="password" type="text"  class="form-control">
-                        </div>
-                        <div class="col-xs-12">
-                            <label> Nhập lại mật khẩu </label>
-                            <input id="password" type="text"  class="form-control">
-                        </div>
-                        <div class="col-xs-12">
-                            <label> Giới tính </label> <br>
-                            <input type="radio" name="gender" value="true" id="male">
-                            <label for="male" class="mr-2">Nam</label>
-                            <input type="radio" name="gender" value="false" id="female">
-                            <label for="female">Nữ</label>
-                        </div>
-                       <div class="col-sx-12">
-                        <button class="btn-signup mt-3"><i class="fa fa-user mr-2"></i><span>Đăng ký</span></button>
-                       </div>
-                        
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -94,6 +100,8 @@
   <!-- owl carousel -->
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+  <!-- signUp js -->
+  <script src="../controller/signup.js"></script>
 </body>
 
 </html>
