--- a/view/detail.html
+++ b/view/detail.html
@@ -14,86 +14,329 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <!-- Font icomoon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icomoon@1.0.0/style.min.css">
+  <!-- Font icomoon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icomoon@1.0.0/style.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Owl carousel -->
-    <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
+  <!-- Owl carousel -->
+  <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
   <!-- Main CSS -->
-  <link rel="stylesheet" href="./asset/css/main.css">
+  <link rel="stylesheet" href="../asset/css/main.css">
 </head>
+
 <body>
-    <section class="detail mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="detail-content row">
-                    <div class="product-image col-xs-12 col-sm-5 col-lg-5 col-md-5">
-                        <a href="#">
-                            <img class="zoom-img"
-                                src="https://imageskincare.vn/wp-content/uploads/2022/01/ILUMA-INTENSE-BRIGHTENING-EXFOLIATING-CLEANSER-LIFESTYLE-07.jpg"
-                                alt="products">
-                        </a>
-                    </div>
-                    <div class="product-details col-xs-12 col-sm-7 col-lg-7 col-md-7 ">
-                        <div class="product-name">
-                            <h2>Adidas Prophere Customize</h2>
-                        </div>
-                        <div class="price-box">
-                            <p> <span class="price-label">Special Price</span> <span class="price"> $375 </span> </p>
-                        </div>
-                        <div class="ratings">
-                            <div class="star mr-2">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                            </div>
-                            <p class="rating-links"> <a href="#">1 Đánh giá </a> <span class="separator">|</span> <a href="#"> Nhận xét của bạn</a> </p>
-                        </div>
-                        <div class="description mt-3">
-                            <h4>Quick Overview</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec est tristique auctor. Donec non est at libero vulputate rutrum.  </p>
-                            <p> Vivamus adipiscing nisl ut dolor dignissim semper. Nulla luctus malesuada tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos </p>
-                            
-                        <div class="product-size">
-                            <div class="size-area">
-                                <h4>Size</h4>
-                                <div class="size">
-                                    <button class="btn-size"><span>36</span></button>
-                                    <button class="btn-size"><span>37</span></button>
-                                    <button class="btn-size"><span>38</span></button>
-                                    <button class="btn-size"><span>39</span></button>
-                                    <button class="btn-size"><span>40</span></button>
-                                    <button class="btn-size"><span>41</span></button>
-                                    <button class="btn-size"><span>42</span></button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="product-variation mt-3">
-                            <form >
-                              <div class="cart-pluscart-plus d-flex flex-row align-items-center">
-                                <label >Số lượng:</label>
-                                <div class="numbers-row d-flex flex-row align-items-center">
-                                    <div class="qty qty-minus"><i class="fa fa-minus"></i></div>
-                                    <input class="qtyInput" type="text" value="1" id="qty">
-                                    <div class="qty qty-plus"><i class="fa fa-plus"></i></div>
-                                  </div>
-                                <button class="btn-addToCart ml-3" type="button"><span><i class="fa fa-shopping-cart"></i> Add to Cart</span></button>
-                             
-                            </form>
-                          </div>
-
-
-                    </div>
-                </div>
-            </div>
+  <!-- HEADER -->
+  <header>
+    <div class="header__top container " id="headerTop">
+      <div class="row">
+        <div class="col-4 header__col">
+          <form class="form-inline my-2 ">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button id="btnSearch" class=" btn btn-outline-success my-2 my-sm-0" type="submit"><i
+                class="fa fa-search"></i></button>
+          </form>
         </div>
-    </section>
+        <div class="col-4 header__col">
+          <div class="header__logo">
+            <h1><span class="text-danger">S</span>HOESHOP</h1>
+          </div>
+        </div>
+        <div class="col-4 header__col header__bag">
+          <a href="#"><i class="fas fa-shopping-cart "></i></a>
+          <a href="../view/login.html" type="button" class="btn ml-1">Đăng nhập</a>
+          <a href="../view/signup.html" type="button" class="btn ml-1">Đăng ký</a>
+        </div>
 
+      </div>
+    </div>
+    <div class="header__menu" id="headerMenu">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light header__nav">
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Men</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Women</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#">Kid</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <!-- DETAIL -->
+  <section class="detail mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="detail-content row">
+          <div class="product-image col-lg-5 col-md-5 col-sm-5 col-xs-12">
+            <img class="img"
+                src=""
+                alt="">
+          </div>
+          <div class="product-details col-lg-7 col-md-7 col-sm-7 col-xs-12 ">
+            <div class="product-name">
+              <h2 class="pro-name">Adidas Prophere Customize</h2>
+            </div>
+            <div class="price-box">
+               <span class="price products__price"> </span> 
+            </div>
+            <div class="ratings">
+              <div class="star mr-2">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-links"> <a href="#">1 Đánh giá </a> <span class="separator">|</span> <a href="#"> Nhận
+                  xét của bạn</a> </p>
+            </div>
+            <div class="description mt-3">
+              <h4>Mô tả sản phẩm</h4>
+              <p class="pro-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec est tristique auctor.
+                Donec non est at libero vulputate rutrum. </p>
+              <p> Vivamus adipiscing nisl ut dolor dignissim semper. Nulla luctus malesuada tincidunt. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per inceptos </p>
+
+              <div class="product-size">
+                <div class="size-area">
+                  <h4>Size</h4>
+                  <div class="size">
+                    <button class="btn-size"><span>36</span></button>
+                    <button class="btn-size"><span>37</span></button>
+                    <button class="btn-size"><span>38</span></button>
+                    <button class="btn-size"><span>39</span></button>
+                    <button class="btn-size"><span>40</span></button>
+                    <button class="btn-size"><span>41</span></button>
+                    <button class="btn-size"><span>42</span></button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="product-variation mt-3">
+                <form>
+                  <div class="cart-pluscart-plus d-flex flex-row align-items-center">
+                    <label>Số lượng:</label>
+                    <div class="numbers-row d-flex flex-row align-items-center">
+                      <div class="qty qty-minus"><i class="fa fa-minus"></i></div>
+                      <span class="qtyInput d-flex align-items-center justify-content-center">1</span>
+                      <div class="qty qty-plus"><i class="fa fa-plus"></i></div>
+                    </div>
+                    <button class="btn-addToCart ml-3" type="button"><span><i class="fa fa-shopping-cart"></i> Add to
+                        Cart</span></button>
+
+                </form>
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <!-- RELATED -->
+    <!-- <section class="products">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="products__info" id="productsInfo">
+              <h3 class="product__title fa-pull-left">Products Related</h3>
+              <ul class="products__menu nav home-nav-tabs">
+                <li class="active"><a href="#all" data-toggle="tab" aria-expanded="false">All</a></li>
+                <li> <a href="#women" data-toggle="tab" aria-expanded="false">Women</a> </li>
+                <li> <a href="#men" data-toggle="tab" aria-expanded="false">Men</a> </li>
+                <li> <a href="#kids" data-toggle="tab" aria-expanded="false">Kids</a> </li>
+              </ul>
+
+            </div>
+            <!-- <div class="products__content">
+              <div class="row">
+                <div class="col-3 mt-3">
+                  <div class="products__border">
+                    <div class="products__item">
+                      <div class="products__img">
+                        <img src="./asset/img/seller-1.jpg" alt="">
+                        <div class="products__hidden">
+                          <div class="products__heart">
+                            <a href="#"><i class="fa-solid fa-heart"></i></a>
+                          </div>
+                          <div class="products__signal">
+                            <a href="#"><i class="fa-solid fa-signal"></i></a>
+                          </div>
+                          <div class="products__view">
+                            <a href="#"><i class="fa-solid fa-magnifying-glass-plus"></i> quick view</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="product__title">
+                        <h4>Product title</h4>
+                        <div class="products__rating">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-regular fa-star"></i>
+                          <i class="fa-regular fa-star"></i>
+                        </div>
+                        <div class="products__price">
+                          <span>$125.00</span>
+                        </div>
+                        <div class="product__button">
+                          <a href="./view/detail.html"><i class="fa fa-shopping-cart"></i> Buy Now </a>
+
+
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              
+              </div>
+            </div> 
+          </div>
+        </div>
+      </div>
+    </section> -->
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="footer__top">
+        <div class="row">
+          <div class="col-3">
+            <h3>SIGN UP FOR NEWSLETTER</h3>
+            <p>Get the latest deals and special offers</p>
+          </div>
+          <div class="col-5">
+            <form id="emailForm" method="post" action="#">
+              <div class="footer__form">
+                <input class="footer__email" name="Email" placeholder="Enter Your Email">
+                <button class="button footer__sub" type="submit" title="Subscribe"><i
+                    class="fa-solid fa-envelope"></i>Subscribe</button>
+              </div>
+            </form>
+          </div>
+          <div class="col-4">
+            <div class="social">
+              <ul class="inline-mode">
+                <li class="social-network fb"><a title="Connect us on Facebook" target="_blank"
+                    href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li class="social-network googleplus"><a title="Connect us on Google+" target="_blank"
+                    href="https://plus.google.com"><i class="fa-brands fa-google-plus-g"></i></a>
+                </li>
+                <li class="social-network tw"><a title="Connect us on Twitter" target="_blank"
+                    href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
+                <li class="social-network linkedin"><a title="Connect us on Linkedin" target="_blank"
+                    href="https://www.pinterest.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
+                <li class="social-network rss"><a title="Connect us on Instagram" target="_blank" href="#"><i
+                      class="fa fa-rss"></i></a></li>
+                <li class="social-network instagram"><a title="Connect us on Instagram" target="_blank"
+                    href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="row">
+          <div class="col-3">
+            <div class="footer__logo">
+              <h1><span class="text-danger">S</span>HOESHOP</h1>
+            </div>
+            <div class="footer__content">
+              <div class="email d-flex align-items-center"> <i class="fa fa-envelope"></i>
+                <span>nguyenquocanh2509@gmail.com</span>
+              </div>
+              <div class="phone"> <i class="fa-solid fa-phone"></i>
+                <span>0388902231</span>
+              </div>
+              <div class="address"> <i class="fa-solid fa-location-dot"></i>
+                <span>Trần Phú, Hải Châu, Đà Nẵng</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer__links">
+              <h3 class="link__title">Information</h3>
+              <div class="tabBlock" id="TabBlock-1">
+                <ul class="list__links list-unstyled">
+                  <li><a href="#s">Delivery Information</a></li>
+                  <li><a href="#">Discount</a></li>
+                  <li><a href="sitemap.html">Sitemap</a></li>
+                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="faq.html">FAQs</a></li>
+                  <li><a href="#">Terms &amp; Condition</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer__links">
+              <h3 class="link__title">Insider</h3>
+              <div class="tabBlock" id="TabBlock-3">
+                <ul class="list__links list-unstyled">
+                  <li> <a href="sitemap.html"> Sites Map </a> </li>
+                  <li> <a href="#">News</a> </li>
+                  <li> <a href="#">Trends</a> </li>
+                  <li> <a href="about_us.html">About Us</a> </li>
+                  <li> <a href="contact_us.html">Contact Us</a> </li>
+                  <li> <a href="#">My Orders</a> </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer__links">
+              <h3 class="link__title">Service</h3>
+              <div class="tabBlock" id="TabBlock-4">
+                <ul class="list__links list-unstyled">
+                  <li> <a href="account_page.html">Account</a> </li>
+                  <li> <a href="wishlist.html">Wishlist</a> </li>
+                  <li> <a href="shopping_cart.html">Shopping Cart</a> </li>
+                  <li> <a href="#">Return Policy</a> </li>
+                  <li> <a href="#">Special</a> </li>
+                  <li> <a href="#">Lookbook</a> </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="footer__copyright">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 copyright__title">
+            Copyright © 2017-2022 <a href="#">ShoeShop</a>
+            . All Rights Reserved.
+          </div>
+          <div class="col-6">
+            <div class="payment">
+              <ul>
+                <li><a href="#"><img title="Visa" alt="Visa" src="../asset/img/visa.png"></a></li>
+                <li><a href="#"><img title="Paypal" alt="Paypal" src="../asset/img/paypal.png"></a></li>
+                <li><a href="#"><img title="Discover" alt="Discover" src="../asset/img/discover.png"></a>
+                </li>
+                <li><a href="#"><img title="Master Card" alt="Master Card" src="../asset/img/master-card.png"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -106,6 +349,10 @@
   <!-- owl carousel -->
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+  <!-- axios -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+  <script src="../controller/detail.js"></script>
 </body>
 
 </html>
