--- a/view/loginIndex.html
+++ b/view/loginIndex.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Owl carousel -->
-  <link rel="stylesheet" href="./model/owlCarousel/owl.carousel.min.js">
+  <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
   <!-- Font GG -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,12 +25,13 @@
     <!-- Owl carousel -->
     <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
   <!-- Main CSS -->
-  <link rel="stylesheet" href="./asset/css/main.css">
+  <link rel="stylesheet" href="../asset/css/main.css">
 </head>
 
 <body>
   <!-- HEADER -->
-  <header>
+  <!-- <header>
+
     <div class="header__top container " id="headerTop">
       <div class="row">
         <div class="col-4 header__col">
@@ -46,59 +47,7 @@
           </div>
         </div>
         <div class="col-4 header__col header__bag">
-          <a href="#" class="m-1" onclick="showCartModal()"><i class="fas fa-shopping-cart"></i></a>
-
-<!-- Modal -->
-<div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="false">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Giỏ hàng</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Sản phẩm</th>
-              <th>Giá</th>
-              <th>Số lượng</th>
-              <th>Tổng cộng</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Áo phông</td>
-              <td>$20</td>
-              <td>2</td>
-              <td>$40</td>
-              <td><button class="btn btn-danger">Xóa</button></td>
-            </tr>
-            <tr>
-              <td>Quần jean</td>
-              <td>$50</td>
-              <td>1</td>
-              <td>$50</td>
-              <td><button class="btn btn-danger">Xóa</button></td>
-            </tr>
-            <tr>
-              <td colspan="3"></td>
-              <td><strong>Tổng cộng:</strong></td>
-              <td><strong>$90</strong></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Tiếp tục mua sắm</button>
-        <button type="button" class="btn btn-primary">Thanh toán</button>
-      </div>
-    </div>
-  </div>
-</div>
+          <a href="#" class="m-1"><i class="fas fa-shopping-cart "></i></a>
             <a href="./view/login.html" class="m-1 bg-danger text-white">Đăng nhập</a>
             <a href="./view/signup.html" class="m-1 bg-primary text-white">Đăng ký</a>
             
@@ -133,7 +82,66 @@
         </div>
       </nav>
     </div>
+  </header> -->
+  <header>
+    <div class="header__top container " id="headerTop">
+      <div class="row">
+        <div class="col-4 header__col">
+          <form class="form-inline my-2 ">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button id="btnSearch" class=" btn btn-outline-success my-2 my-sm-0" type="submit"><i
+                class="fa fa-search"></i></button>
+          </form>
+        </div>
+        <div class="col-4 header__col">
+          <div class="header__logo">
+            <h1><span class="text-danger">S</span>HOESHOP</h1>
+          </div>
+        </div>
+        <div class="col-4 header__col header__bag">
+          <a href="#" class="m-1"><i class="fas fa-shopping-cart "></i></a>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Tài khoản
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Thông tin cá nhân</a>
+              <a class="dropdown-item" href="#" id="logoutButton">Đăng xuất</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="header__menu" id="headerMenu">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light header__nav">
+  
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav" id="data-loginCategory">
+            <li class="nav-item active">
+              <a class="nav-link" data-category-id=" " href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-category-id="adidas" href="#products">ADIDAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-category-id="men" href="#products">MEN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " data-category-id="nike" href="#products">NIKE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " data-category-id="vans_converse" href="#products">VANS_CONVERSE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " data-category-id="women" href="#products">WOMEN</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
+  
   <!-- CAROUSEL -->
   <section class="carousel">
     <div class="container">
@@ -145,17 +153,17 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./asset/img/CONTINENTAL_80.png" class="carousel__img d-block " alt="...">
+            <img src="../asset/img/CONTINENTAL_80.png" class="carousel__img d-block " alt="...">
             <div class="carousel-caption d-none d-md-block">
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./asset/img/SUPERSTAR_Dark.png" class="carousel__img d-block ml-3" alt="...">
+            <img src="../asset/img/SUPERSTAR_Dark.png" class="carousel__img d-block ml-3" alt="...">
             <div class="carousel-caption d-none d-md-block">
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./asset/img/SUPERSTAR_Light.png" class="carousel__img d-block " alt="...">
+            <img src="../asset/img/SUPERSTAR_Light.png" class="carousel__img d-block " alt="...">
             <div class="carousel-caption d-none d-md-block">
             </div>
           </div>
@@ -212,7 +220,7 @@
         <div class="col-12">
           <div class="products__info" id="productsInfo">
             <h3 class="product__title fa-pull-left">Products category</h3>
-            <ul class="products__menu nav home-nav-tabs" id="data-category2">
+            <ul class="products__menu nav home-nav-tabs" id="data-loginCategory2">
               <li class="active"><a href="#all" data-toggle="tab" aria-expanded="false" data-category-id="">All</a></li>
               <li> <a href="#adidas" data-toggle="tab" aria-expanded="false" data-category-id="adidas">ADIDAS</a> </li>
               <li> <a href="#men" data-toggle="tab" aria-expanded="false" data-category-id="men">MEN</a> </li>
@@ -344,10 +352,10 @@
           <div class="col-6">
             <div class="payment">
               <ul>
-                <li><a href="#"><img title="Visa" alt="Visa" src="./asset/img/visa.png"></a></li>
-                <li><a href="#"><img title="Paypal" alt="Paypal" src="./asset/img/paypal.png"></a></li>
-                <li><a href="#"><img title="Discover" alt="Discover" src="./asset/img/discover.png"></a></li>
-                <li><a href="#"><img title="Master Card" alt="Master Card" src="./asset/img/master-card.png"></a></li>
+                <li><a href="#"><img title="Visa" alt="Visa" src="../asset/img/visa.png"></a></li>
+                <li><a href="#"><img title="Paypal" alt="Paypal" src="../asset/img/paypal.png"></a></li>
+                <li><a href="#"><img title="Discover" alt="Discover" src="../asset/img/discover.png"></a></li>
+                <li><a href="#"><img title="Master Card" alt="Master Card" src="../asset/img/master-card.png"></a></li>
               </ul>
             </div>
           </div>
@@ -369,8 +377,9 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
   <!-- axios -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="./controller/DSSP.js"></script>
-  <script src="./controller/index.js"></script>
+  <script src="../controller/DSSP.js"></script>
+  <script src="../controller/CategoryIndex.js"></script>
+  <script src="../controller/logout.js"></script>
 </body>
 
 </html>
