--- a/view/signup.html
+++ b/view/signup.html
@@ -39,38 +39,54 @@
                 </div>
                 <div class="col-4 header__col">
                     <div class="header__logo">
-                        <h1><span class="text-danger">S</span>HOESHOP</h1>
+                        <h1><a href="#"><span class="text-danger">S</span>HOESHOP</a></h1>
                     </div>
                 </div>
                 <div class="col-4 header__col header__bag">
-                    <a href="#"><i class="fas fa-shopping-cart "></i></a>
-                    <a href="../view/login.html" type="button" class="btn ml-1">Đăng nhập</a>
-                    <a href="../view/signup.html" type="button" class="btn ml-1">Đăng ký</a>
-                </div>
+                    <a href="./view/cart.html" class="m-1 " style="display: none;"  id="btn-gio-hang"><i class="fas fa-shopping-cart "></i></a>
+                      <a href="./login.html" class="m-1 bg-danger text-white" id="btn-Dangnhap">Đăng nhập</a>
+                      <a href="#" class="m-1 bg-primary text-white" id="btn-Dangky">Đăng ký</a>
+                      <div class="dropdown" id="drop-dangNhap" style="display: none;">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                          aria-haspopup="true" aria-expanded="false">
+                          Tài khoản
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
+                          <a class="dropdown-item" href="#">Thông tin cá nhân</a>
+                          <a class="dropdown-item" href="#" id="logoutButton">Đăng xuất</a>
+                        </div>
+                      </div>
+                  </div>
 
             </div>
         </div>
         <div class="header__menu" id="headerMenu">
             <nav class="navbar navbar-expand-lg navbar-light bg-light header__nav">
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Men</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Women</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Kid</a>
-                        </li>
-                    </ul>
-                </div>
+      
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav" id="data-category">
+                  <li class="nav-item active">
+                    <a class="nav-link" data-category-id=" " href="../index.html">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" data-category-id="adidas" href="../index.html#products">ADIDAS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" data-category-id="men" href="../index.html#products">MEN</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " data-category-id="nike" href="../index.html#products">NIKE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " data-category-id="vans_converse" href="../index.html#products">VANS_CONVERSE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " data-category-id="women" href="../index.html#products">WOMEN</a>
+                  </li>
+                </ul>
+              </div>
             </nav>
-        </div>
+          </div>
     </header>
 
     <!-- SIGNUP -->
@@ -290,6 +306,7 @@
     <script src="../model/validation.js"></script>
     <script type="text/javascript" src="../model/userRegister.js"></script>
     <script src="../controller/register.js"></script>
+    <script src="../controller/logout.js"></script>
 </body>
 
 </html>
