--- a/asset/sass/main.scss
+++ b/asset/sass/main.scss
@@ -17,7 +17,8 @@
 @import "./Pages/login";
 @import "./Pages/signup";
 @import "./Pages/detail";
+@import "./Pages/cart";
 
 //Components
 @import "./Components/button";
-
+@import "./Components/backtotop";
