--- a/view/cart.html
+++ b/view/cart.html
@@ -10,79 +10,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Font GG -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- Font icomoon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icomoon@1.0.0/style.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Owl carousel -->
   <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
-  <!-- Font GG -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Owl carousel -->
-    <link rel="stylesheet" href="../js/owlCarousel/owl.carousel.min.js">
   <!-- Main CSS -->
   <link rel="stylesheet" href="../asset/css/main.css">
 </head>
 
 <body>
   <!-- HEADER -->
-  <!-- <header>
-
-    <div class="header__top container " id="headerTop">
-      <div class="row">
-        <div class="col-4 header__col">
-          <form class="form-inline my-2 ">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button id="btnSearch" class=" btn btn-outline-success my-2 my-sm-0" type="submit"><i
-                class="fa fa-search"></i></button>
-          </form>
-        </div>
-        <div class="col-4 header__col">
-          <div class="header__logo">
-            <h1><span class="text-danger">S</span>HOESHOP</h1>
-          </div>
-        </div>
-        <div class="col-4 header__col header__bag">
-          <a href="#" class="m-1"><i class="fas fa-shopping-cart "></i></a>
-            <a href="./view/login.html" class="m-1 bg-danger text-white">Đăng nhập</a>
-            <a href="./view/signup.html" class="m-1 bg-primary text-white">Đăng ký</a>
-            
-        </div>
-
-      </div>
-    </div>
-    <div class="header__menu" id="headerMenu">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light header__nav">
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav" id="data-category">
-            <li class="nav-item active">
-              <a class="nav-link" data-category-id=" " href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" data-category-id="adidas" href="#products">ADIDAS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" data-category-id="men" href="#products">MEN</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " data-category-id="nike" href="#products">NIKE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " data-category-id="vans_converse" href="#products">VANS_CONVERSE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " data-category-id="women" href="#products">WOMEN</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </header> -->
   <header>
     <div class="header__top container " id="headerTop">
       <div class="row">
@@ -95,21 +39,23 @@
         </div>
         <div class="col-4 header__col">
           <div class="header__logo">
-            <h1><a href="#"><span class="text-danger">S</span>HOESHOP</a></h1>
+            <h1><a href="./loginIndex.html"><span class="text-danger">S</span>HOESHOP</a></h1>
           </div>
         </div>
         <div class="col-4 header__col header__bag">
-          <a href="../view/cart.html" class="m-1"><i class="fas fa-shopping-cart "></i></a>
-          <div class="dropdown" id="drop-dangNhap">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Tài khoản
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
-              <a class="dropdown-item" href="#">Thông tin cá nhân</a>
-              <a class="dropdown-item" href="#" id="logoutButton">Đăng xuất</a>
+          <a href="./view/cart.html" class="m-1 " style="display: none;"  id="btn-gio-hang"><i class="fas fa-shopping-cart "></i></a>
+            <a href="./login.html" class="m-1 bg-danger text-white" id="btn-Dangnhap"  style="display: none;">Đăng nhập</a>
+            <a href="./signup.html" class="m-1 bg-primary text-white" id="btn-Dangky"  style="display: none;">Đăng ký</a>
+            <div class="dropdown" id="drop-dangNhap">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Tài khoản
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
+                <a class="dropdown-item" href="#">Thông tin cá nhân</a>
+                <a class="dropdown-item" href="#" id="logoutButton">Đăng xuất</a>
+              </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
@@ -119,125 +65,56 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav" id="data-loginCategory">
             <li class="nav-item active">
-              <a class="nav-link" data-category-id=" " href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" data-category-id=" " href="../index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-category-id="adidas" href="#products">ADIDAS</a>
+              <a class="nav-link" data-category-id="adidas" href="../index.html#products">ADIDAS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-category-id="men" href="#products">MEN</a>
+              <a class="nav-link" data-category-id="men" href="../index.html#products">MEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " data-category-id="nike" href="#products">NIKE</a>
+              <a class="nav-link " data-category-id="nike" href="../index.html#products">NIKE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " data-category-id="vans_converse" href="#products">VANS_CONVERSE</a>
+              <a class="nav-link " data-category-id="vans_converse" href="../index.html#products">VANS_CONVERSE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " data-category-id="women" href="#products">WOMEN</a>
+              <a class="nav-link " data-category-id="women" href="../index.html#products">WOMEN</a>
             </li>
           </ul>
         </div>
       </nav>
     </div>
   </header>
-  
-  <!-- CAROUSEL -->
-  <section class="carousel">
-    <div class="container">
-      <div id="carouselShoe" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselShoe" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselShoe" data-slide-to="1"></li>
-          <li data-target="#carouselShoe" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../asset/img/CONTINENTAL_80.png" class="carousel__img d-block " alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../asset/img/SUPERSTAR_Dark.png" class="carousel__img d-block ml-3" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../asset/img/SUPERSTAR_Light.png" class="carousel__img d-block " alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-target="#carouselShoe" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-target="#carouselShoe" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </button>
-      </div>
-      <div class="carousel__services">
-        <div class="row">
-          <div class="col col-md-4 col-sm-4 col-xs-12 no-padding">
-            <div class="block-wrapper ship">
-              <div class="text-des"><i class="fa fa-rocket"></i>
-              </div>
-              <div>
-                <h3>FREE SHIPPING & RETURN</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col col-md-4 col-sm-4 col-xs-12 no-padding">
-            <div class="block-wrapper return">
-              <div class="text-des"> <i class="fa fa-dollar"></i>
-              </div>
-              <div>
-                <h3>MONEY BACK GUARANTEE</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col col-md-4 col-sm-4 col-xs-12 no-padding">
-            <div class="block-wrapper support">
-              <div class="text-des"> <i class="fa fa-headphones"></i>
-              </div>
-              <div>
-                <h3>ONLINE SUPPORT 24/7</h3>
-                <p>Lorem ipsum dolor sit amet. </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- PRODUCTS -->
-  <section class="products" id="products">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="products__info" id="productsInfo">
-            <h3 class="product__title fa-pull-left">Products category</h3>
-            <ul class="products__menu nav home-nav-tabs" id="data-loginCategory2">
-              <li class="active"><a href="#all" data-toggle="tab" aria-expanded="false" data-category-id="">All</a></li>
-              <li> <a href="#adidas" data-toggle="tab" aria-expanded="false" data-category-id="adidas">ADIDAS</a> </li>
-              <li> <a href="#men" data-toggle="tab" aria-expanded="false" data-category-id="men">MEN</a> </li>
-              <li> <a href="#nike" data-toggle="tab" aria-expanded="false" data-category-id="nike">NIKE</a> </li>
-              <li> <a href="#vans_converse" data-toggle="tab" aria-expanded="false" data-category-id="vans_converse">VANS_CONVERSE</a> </li>
-              <li> <a href="#women" data-toggle="tab" aria-expanded="false" data-category-id="women">WOMEN</a> </li>
-            </ul>
 
+  
+  <!-- CART -->
+  <section class="carts py-2 py-md-5">
+    <div class="container" >
+        <div class="gio-hang" >
+          <table>
+            <thead>
+              <tr>
+                <th>Hình sản phẩm</th>
+                <th>Sản phẩm</th>
+                <th>Giá</th>
+                <th style="width: 10%;">Số lượng</th>
+                <th>Tổng cộng</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody id="gioHang">
+              
+            </tbody>
+          </table>
+          <div class="text-right mt-3">
+            <button type="button" class="btn btn-mua">Mua hàng</button>
           </div>
-          <div class="products__content">
-            <div class="row" id="productSP">
-          </div>
-        </div>
       </div>
     </div>
-    </div>
-  </section>
+</section>
+  <!-- FOOTER -->
   <footer>
     <div class="container">
       <div class="footer__top">
@@ -261,11 +138,13 @@
                 <li class="social-network fb"><a title="Connect us on Facebook" target="_blank"
                     href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li class="social-network googleplus"><a title="Connect us on Google+" target="_blank"
-                    href="https://plus.google.com"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                    href="https://plus.google.com"><i class="fa-brands fa-google-plus-g"></i></a>
+                </li>
                 <li class="social-network tw"><a title="Connect us on Twitter" target="_blank"
                     href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
                 <li class="social-network linkedin"><a title="Connect us on Linkedin" target="_blank"
-                    href="https://www.pinterest.com/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    href="https://www.pinterest.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
                 <li class="social-network rss"><a title="Connect us on Instagram" target="_blank" href="#"><i
                       class="fa fa-rss"></i></a></li>
                 <li class="social-network instagram"><a title="Connect us on Instagram" target="_blank"
@@ -354,7 +233,8 @@
               <ul>
                 <li><a href="#"><img title="Visa" alt="Visa" src="../asset/img/visa.png"></a></li>
                 <li><a href="#"><img title="Paypal" alt="Paypal" src="../asset/img/paypal.png"></a></li>
-                <li><a href="#"><img title="Discover" alt="Discover" src="../asset/img/discover.png"></a></li>
+                <li><a href="#"><img title="Discover" alt="Discover" src="../asset/img/discover.png"></a>
+                </li>
                 <li><a href="#"><img title="Master Card" alt="Master Card" src="../asset/img/master-card.png"></a></li>
               </ul>
             </div>
@@ -377,10 +257,13 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
   <!-- axios -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="../controller/DSSP.js"></script>
-  <script src="../controller/CategoryIndex.js"></script>
+
+  <!-- <script src="../controller/index.js"></script> -->
   <script src="../controller/cart.js"></script>
   <script src="../controller/logout.js"></script>
+  <script src="../controller/index.js"></script>
+
+
 </body>
 
 </html>
