--- a/view/login.html
+++ b/view/login.html
@@ -39,13 +39,23 @@
         </div>
         <div class="col-4 header__col">
           <div class="header__logo">
-            <h1><span class="text-danger">S</span>HOESHOP</h1>
+            <h1><a href="#"><span class="text-danger">S</span>HOESHOP</a></h1>
           </div>
         </div>
         <div class="col-4 header__col header__bag">
-          <a href="#"><i class="fas fa-shopping-cart "></i></a>
-          <a href="../view/login.html" type="button" class="btn ml-1">Đăng nhập</a>
-          <a href="../view/signup.html" type="button" class="btn ml-1">Đăng ký</a>
+          <a href="./cart.html" class="m-1 " style="display: none;"  id="btn-gio-hang"><i class="fas fa-shopping-cart "></i></a>
+            <a href=".#" class="m-1 bg-danger text-white" id="btn-Dangnhap">Đăng nhập</a>
+            <a href="./signup.html" class="m-1 bg-primary text-white" id="btn-Dangky">Đăng ký</a>
+            <div class="dropdown" id="drop-dangNhap" style="display: none;">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Tài khoản
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
+                <a class="dropdown-item" href="#">Thông tin cá nhân</a>
+                <a class="dropdown-item" href="#" id="logoutButton">Đăng xuất</a>
+              </div>
+            </div>
         </div>
 
       </div>
@@ -54,18 +64,24 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light header__nav">
 
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav" id="data-category">
             <li class="nav-item active">
-              <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" data-category-id=" " href="../index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Men</a>
+              <a class="nav-link" data-category-id="adidas" href="../index.html#products">ADIDAS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Women</a>
+              <a class="nav-link" data-category-id="men" href="../index.html#products">MEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">Kid</a>
+              <a class="nav-link " data-category-id="nike" href="../index.html#products">NIKE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " data-category-id="vans_converse" href="../index.html#products">VANS_CONVERSE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " data-category-id="women" href="../index.html#products">WOMEN</a>
             </li>
           </ul>
         </div>
@@ -97,7 +113,7 @@
         <input id="password" type="password" placeholder="Mật khẩu" class="form-control">
 
         <p class="forgot-pass"><a href="#">Quên mật khẩu?</a></p>
-        <button class="btn-login" type="submit" id="btnLogin"><i class="fa fa-lock mr-2"></i><span>Đăng nhập</span></button>
+        <button class="btn-login" type="submit" id="btnLogin" ><i class="fa fa-lock mr-2"></i><span>Đăng nhập</span></button>
         <p class="reg mt-3">Bạn chưa có tài khoản?<a href="../view/signup.html"> Đăng ký</a></p>
         </form>
       </div>
@@ -250,6 +266,7 @@
     <!-- main js -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../controller/login.js"></script>
+    <script src="../controller/logout.js"></script>
 </body>
 
 </html>
